Linker Upload Images and clipboard

--- a/src/pages/Linker/ShippersNewRequest.css
+++ b/src/pages/Linker/ShippersNewRequest.css
@@ -3,6 +3,7 @@
   border-radius: 4px;
   padding: 5px;
   width: 450px;
+  cursor: pointer;
 }
 .show-image
   {
@@ -21,22 +22,23 @@
 }
 .show-image button
   {
-  position:absolute;
-  top:0;
-  left:0;
-  display:none;
+    position:absolute;
+    top:0;
+    left:0;
+    display:none;
   }
 .img-buttons-times{
-    border-radius: 50%;
+  background-color: #1e1e1e;
   border: none;
   color: white;
-  padding: 20px;
+  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 0px 0px;
-  background-color: #1e1e1e;
+  margin: 4px 2px;
+  cursor: pointer;
+  
 }
 
 .img-buttons-times:hover{
@@ -63,3 +65,65 @@
   text-align: left;
   font-weight: bold;
 }
+
+
+
+/* MODAL */
+.modal {
+   /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {  
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
